--- a/Projeto-Formulario/index.html
+++ b/Projeto-Formulario/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -25,70 +25,88 @@
           placeholder="Um título para anunciar seu carro"
           required
         />
-        <div class="input">
-          <label for="preco">Preço: <span class="asterisco">*</span></label>
-          <input
-            type="number"
-            name="preco"
-            placeholder="Defina o preço"
-            required
-          />
-        </div>
-        <div class="input">
-          <label for="preco">Descrição: <span class="asterisco">*</span></label>
-          <textarea name="descricao" id="" placeholder="Aqui você coloca os detalhes do veículo, por exemplo: se ele tem algum arranhão"></textarea>
       </div>
       <div class="input">
-          <label for="marca">Marca: <span class="asterisco">*</span></label>
-          <input
-            type="text"
-            name="marca"
-            placeholder="Digite a marca do veiculo"
-            required
-          />
+        <label for="preco">Preço: <span class="asterisco">*</span></label>
+        <input
+          type="number"
+          name="preco"
+          placeholder="Defina o preço"
+          required
+        />
+      </div>
+      <div class="input">
+        <label for="preco">Descrição: <span class="asterisco">*</span></label>
+        <textarea
+          name="descricao"
+          id=""
+          placeholder="Aqui você coloca os detalhes do veículo, por exemplo: se ele tem algum arranhão"
+        ></textarea>
+      </div>
+      <div class="input">
+        <label for="marca">Marca: <span class="asterisco">*</span></label>
+        <input
+          type="text"
+          name="marca"
+          placeholder="Digite a marca do veiculo"
+          required
+        />
+      </div>
+      <div class="input">
+        <label for="marca">Modelo: <span class="asterisco">*</span></label>
+        <input
+          type="text"
+          name="modelo"
+          placeholder="Digite o modelo do veículo"
+          required
+        />
+      </div>
+      <div class="input">
+        <label for="quilometragem"
+          >Quilometragem: <span class="asterisco">*</span></label
+        >
+        <input
+          type="number"
+          name="quilometragem"
+          placeholder="Digite a quilometragem do veículo"
+          required
+        />
+      </div>
+      <div class="input">
+        <label for="data"
+          >Data de compra: <span class="asterisco">*</span></label
+        >
+        <input type="date" name="data" required />
+      </div>
+      <div class="input-radio">
+        <label for="cambio"
+          >Tipo de câmbio: <span class="asterisco">*</span></label
+        >
+        <div class="test"></div>
+        <input id="manual" type="radio" name="cambio" required />
+        <label for="manual">Manual</label>
+        <input id="automatico" type="radio" name="cambio" required />
+        <label for="automatico">Automático</label>
+      </div>
+      <div class="opcionais">
+        <label for="opcionais">Opcionais:</label>
+        <div class="opcao-check-box">
+          <input type="checkbox" />
+          <label for="air-bag">Air Bag</label>
         </div>
-        <div class="input">
-          <label for="marca">Modelo: <span class="asterisco">*</span></label>
-          <input
-            type="text"
-            name="modelo"
-            placeholder="Digite o modelo do veículo"
-            required
-          />
+        <div class="opcao-check-box">
+          <input type="checkbox" />
+          <label for="alarme">Alarme</label>
         </div>
-        <div class="input">
-          <label for="quilometragem">Quilometragem: <span class="asterisco">*</span></label>
-          <input
-            type="number"
-            name="quilometragem"
-            placeholder="Digite a quilometragem do veículo"
-            required
-          />
+        <div class="opcao-check-box">
+          <input type="checkbox" />
+          <label for="ar-condicionado">Ar Condicionado</label>
         </div>
-        <div class="input">
-          <label for="data">Data de compra: <span class="asterisco">*</span></label>
-          <input
-            type="date"
-            name="data"
-            required
-          />
+        <div class="opcao-check-box">
+          <input type="checkbox" />
+          <label for="camera-re">Câmera de Ré</label>
         </div>
-        <div class="input">
-          <label for="cambio">Tipo de câmbio: <span class="asterisco">*</span></label>
-          <input
-            type="radio"
-            name="cambio"
-            required
-          />
-          <label for="manual">Manual</label>
-          <input
-            type="radio"
-            name="cambio"
-            required
-          />
-          <label for="automatico">Automatico</label>
-        </div>
+      </div>
     </div>
-    
   </body>
 </html>
