Adiciona foto e botao cadastrar

--- a/Projeto-Formulario/index.html
+++ b/Projeto-Formulario/index.html
@@ -82,7 +82,7 @@
         <label for="cambio"
           >Tipo de câmbio: <span class="asterisco">*</span></label
         >
-        <div class="test"></div>
+        <br />
         <input id="manual" type="radio" name="cambio" required />
         <label for="manual">Manual</label>
         <input id="automatico" type="radio" name="cambio" required />
@@ -92,20 +92,17 @@
         <label for="opcionais">Opcionais:</label>
         <div class="opcao-check-box">
           <input type="checkbox" />
-          <label for="air-bag">Air Bag</label>
+          <label for="">gasolina</label>
         </div>
-        <div class="opcao-check-box">
-          <input type="checkbox" />
-          <label for="alarme">Alarme</label>
-        </div>
-        <div class="opcao-check-box">
-          <input type="checkbox" />
-          <label for="ar-condicionado">Ar Condicionado</label>
-        </div>
-        <div class="opcao-check-box">
-          <input type="checkbox" />
-          <label for="camera-re">Câmera de Ré</label>
-        </div>
+      </div>
+      <div class="foto">
+        <label for="foto"
+          >Fotos do carro: <span class="asterisco">*</span></label
+        >
+        <input type="file" />
+      </div>
+      <div class="cadastrar">
+        <input type="submit" value="CADASTRAR" />
       </div>
     </div>
   </body>
