--- a/Projeto-Formulario/index.html
+++ b/Projeto-Formulario/index.html
@@ -82,17 +82,46 @@
         <label for="cambio"
           >Tipo de câmbio: <span class="asterisco">*</span></label
         >
-        <br />
-        <input id="manual" type="radio" name="cambio" required />
-        <label for="manual">Manual</label>
-        <input id="automatico" type="radio" name="cambio" required />
-        <label for="automatico">Automático</label>
+        <div class="opcoes">
+          <input id="manual" type="radio" name="cambio" required />
+          <label for="manual">Manual</label>
+          <input id="automatico" type="radio" name="cambio" required />
+          <label for="automatico">Automático</label>
+        </div>
       </div>
-      <div class="opcionais">
-        <label for="opcionais">Opcionais:</label>
+      <div class="opcionais-check-box">
+        <p>Opcionais:</p>
+        <div class="opcao-check-box">
+          <input type="checkbox" id="air-bag" />
+          <label for="air-bag">Airbag</label>
+        </div>
+        <div class="opcao-check-box">
+          <input type="checkbox" id="alarme" />
+          <label for="alarme">Alarme</label>
+        </div>
         <div class="opcao-check-box">
           <input type="checkbox" />
-          <label for="">gasolina</label>
+          <label for="ar-condicionado">Ar Condicionado</label>
+        </div>
+        <div class="opcao-check-box">
+          <input type="checkbox" />
+          <label for="camera-de-re">Câmera de Ré</label>
+        </div>
+        <div class="opcao-check-box">
+          <input type="checkbox" />
+          <label for="assistente-pista">Assistente de Pista</label>
+        </div>
+        <div class="opcao-check-box">
+          <input type="checkbox" name="" id="" />
+          <label for="partida-keyless">Partida Keyless</label>
+        </div>
+        <div class="opcao-check-box">
+          <input type="checkbox" name="" id="" />
+          <label for="integracao-celular">Integração com celular</label>
+        </div>
+        <div class="opcao-check-box">
+          <input type="checkbox" name="" id="" />
+          <label for="banco-couro">Banco de couro</label>
         </div>
       </div>
       <div class="foto">
