Atualiza formularios html

--- a/Teoria-Formularios/formularios.html
+++ b/Teoria-Formularios/formularios.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -8,10 +8,10 @@
   </head>
   <body>
     <h2>Formulários HTML</h2>
-    <form action="registrar.php" method="GET">
+    <form action="registrar.php" method="POST">
       <div>
-        <label for="">Nome:</label>
-        <input type="text" />
+        <label for="name">Nome:</label>
+        <input type="text" name="name" />
       </div>
       <div>
         <label for="age">Idade:</label>
