Atualiza codigos teste

--- a/Projeto-HdcHost/teste.html
+++ b/Projeto-HdcHost/teste.html
@@ -11,16 +11,14 @@
       <a href="#">
         <img src="img/hdchostlogo.png" alt="Logo hDC Host" class="logo" />
       </a>
-      <div class="navbar-container">
-        <nav>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Preços</a></li>
-            <li><a href="#">Contatos</a></li>
-            <li><a href="#">Entrar</a></li>
-          </ul>
-        </nav>
-      </div>
+      <nav>
+        <ul class="navbar-items">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Preços</a></li>
+          <li><a href="#">Contatos</a></li>
+          <li><a href="#">Entrar</a></li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
