--- a/Projeto-HdcHost/teste.html
+++ b/Projeto-HdcHost/teste.html
@@ -16,9 +16,15 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Preços</a></li>
           <li><a href="#">Contatos</a></li>
-          <li><a href="#">Entrar</a></li>
+          <li><a href="#" class="btn-entrar">Entrar</a></li>
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="banner">
+        <h1>hDC Host</h1>
+        <p>Os melhores serviços para projetos de todos os tamanhos!</p>
+      </div>
+    </main>
   </body>
 </html>
