--- a/Projeto-HdcHost/teste.html
+++ b/Projeto-HdcHost/teste.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="teste.css" />
   </head>
   <body>
@@ -25,6 +32,94 @@
         <h1>hDC Host</h1>
         <p>Os melhores serviços para projetos de todos os tamanhos!</p>
       </div>
+      <section class="services-container">
+        <ul>
+          <li>
+            <i class="fas fa-shield-alt"></i>
+            <h3>Segurança</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, animi soluta. Doloribus quaerat amet accusantium
+              impedit dolores tempora quae quas nostrum, natus quos aspernatur
+              in molestiae labore aut dolore vitae?
+            </p>
+          </li>
+          <li>
+            <i class="fas fa-rocket"></i>
+            <h3>Performance</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, animi soluta. Doloribus quaerat amet accusantium
+              impedit dolores tempora quae quas nostrum, natus quos aspernatur
+              in molestiae labore aut dolore vitae?
+            </p>
+          </li>
+          <li>
+            <i class="fas fa-comments"></i>
+            <h3>Suporte 24/7</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Molestiae, animi soluta. Doloribus quaerat amet accusantium
+              impedit dolores tempora quae quas nostrum, natus quos aspernatur
+              in molestiae labore aut dolore vitae?
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="pricing-container">
+        <h2>Planos e Preços</h2>
+        <p>Selecione o plano que atende as suas necessidades</p>
+        <div class="plans-container">
+          <div class="plan">
+            <ul>
+              <li class="price">R$15/mês</li>
+              <li class="plan-name">Básico</li>
+              <li>2Gb de espaço</li>
+              <li>11 Subdomínio</li>
+              <li>25 contas de e-mail</li>
+              <li>C-panel</li>
+              <li>Suporte 24/7</li>
+              <li class="plan-btn">Saber mais</li>
+            </ul>
+          </div>
+          <div class="plan">
+            <ul>
+              <li class="price">R$30/mês</li>
+              <li class="plan-name">Dedicado</li>
+              <li>5Gb de espaço</li>
+              <li>10 Subdomínio</li>
+              <li>50 contas de e-mail</li>
+              <li>C-panel</li>
+              <li>Suporte 24/7</li>
+              <li class="plan-btn">Saber mais</li>
+            </ul>
+          </div>
+          <div class="plan">
+            <ul>
+              <li class="price">R$50/mês</li>
+              <li class="plan-name">Dedicado Plus</li>
+              <li>10Gb de espaço</li>
+              <li>10 Subdomínio</li>
+              <li>100 contas de e-mail</li>
+              <li>C-panel</li>
+              <li>Suporte 24/7</li>
+              <li class="plan-btn">Saber mais</li>
+            </ul>
+          </div>
+          <div class="plan">
+            <ul>
+              <li class="price">R$100/mês</li>
+              <li class="plan-name">Cloud</li>
+              <li>20Gb de espaço</li>
+              <li>20 Subdomínio</li>
+              <li>200 contas de e-mail</li>
+              <li>C-panel</li>
+              <li>Suporte 24/7</li>
+              <li class="plan-btn">Saber mais</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
